Fixed color and navbar

--- a/myProject/myApp/templates/myApp/all_recipes.html
+++ b/myProject/myApp/templates/myApp/all_recipes.html
@@ -16,7 +16,7 @@
     <!-- Custom Styles -->
     <style>
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Cinzel', serif;
             margin: 0;
             padding: 0;
             background-color: #f8f9fa;
@@ -27,7 +27,7 @@
 
         /* Navbar styling */
         nav {
-            background-color: #fd1dab;
+            background-color: #87ceeb;
             color: white;
             padding: 10px;
             display: flex;
@@ -53,24 +53,25 @@
 
         nav ul li a {
             text-decoration: none;
-            padding: 8px 15px;
+            padding: 8px 15px; /* Adjust padding as needed */
             border-radius: 5px;
+            color: white; /* Make the text white */
             transition: background-color 0.3s;
         }
 
         nav ul li a:hover {
-            background-color: #df78a3;
+            background-color: #d6efed; /* Add a hover effect */
         }
 
         /* Custom Back Button Color */
         .btn-pink {
-            background-color: #fd1dab; /* Set to your desired pink color */
+            background-color: #87ceeb; /* Set to your desired pink color */
             color: white;
             margin-top: 150px;
         }
 
         .btn-pink:hover {
-            background-color: #df78a3; /* A lighter shade for hover effect */
+            background-color: #d6efed; /* A lighter shade for hover effect */
         }
 
         /* Container styling */
@@ -84,20 +85,20 @@
             margin: 20px auto; /* Adjusted margin */
         }
 
-        h1 {
-            color: #fd1dab;
+        .container h1 {
+            color: #87ceeb;
             font-size: 2rem;
             font-weight: 700;
             margin-bottom: 30px;
             text-align: center;
         }
 
-        ul {
+        .container ul {
             list-style-type: none;
             padding: 0;
         }
 
-        li {
+        .container li {
             margin-bottom: 20px;
             padding: 20px;
             border: 1px solid #ddd;
@@ -108,7 +109,7 @@
         }
 
         a {
-            color: #fd1dab;
+            color: #87ceeb;
             font-weight: 500;
             text-decoration: none;
             margin-left: 10px; /* Space between image and text */
@@ -127,7 +128,7 @@
 
         /* Footer */
         footer {
-            background-color: #fd1dab;
+            background-color: #87ceeb;
             color: white;
             padding: 10px 0;
             text-align: center;
@@ -142,7 +143,7 @@
     </style>
 </head>
 <body>
-
+    {% load static %}
     <!-- Navbar -->
     <nav>
         <div class="logo">
