--- a/myProject/myApp/templates/myApp/recipe_detail.html
+++ b/myProject/myApp/templates/myApp/recipe_detail.html
@@ -101,7 +101,7 @@ p {
  text-align: left; /* Left-align comment text */
  }
  .comment strong {
- color: #fd1dab;
+ color: #87ceeb;
  }
  .comment small {
  font-size: 0.9em;
@@ -119,7 +119,7 @@ height: 60px;
  transition: box-shadow 0.3s;
  }
  .comment-form textarea:focus {
- box-shadow: 0 0 10px rgba(253, 29, 171, 0.5);
+ box-shadow: 0 0 10px rgba(136, 221, 255, 0.5);
  }
  button {
  background-color: #87ceeb; /* Changed color */
